# fpl-analysis

./: .gitignore  .ruff.toml  LICENSE  Makefile  README.md  RELEASE_NOTES.md  pyproject.toml
fpl_transfer_recommender/: checkpoints.md  main.py
fpl_transfer_recommender/data/: api.py  preprocessing.py
fpl_transfer_recommender/models/: feature_engineering.py  recommendation.py  training.py
fpl_transfer_recommender/utils/: config.py  helpers.py
tests/: test_feature_engineering.py
